@@ -1,3 +1,8 @@
+2010-10-20  Sergio Martin <sergio.martin@artica.es>
+
+	* godmode/alerts/alert_list.list.php: Fixed jquery clone 
+	function incompatibility with iexplorer for bug 3090389
+
 2010-10-20  Junichi Satoh  <junichi@rworks.jp>
 
 	* godmode/massive/massive_enable_disable_alerts.php: Improved template
